# strongswan

./: CVE_6.0.6_Analyse.md  NEWS.md  VPN_CLIENT_VICI_WINDOWS.md  rebuild.sh  strongswan_algorithms.md
doc/: plugins.md  plugins.puml
src/frontends/android/: build.gradle
src/frontends/android/app/: build.gradle
src/frontends/android/app/src/main/java/org/strongswan/android/data/: DatabaseHelper.java  ManagedVpnProfile.java  VpnProfile.java  VpnProfileDataSource.java  VpnProfileSqlDataSource.java  VpnType.java
src/frontends/android/app/src/main/java/org/strongswan/android/logic/: CharonVpnService.java
src/frontends/android/app/src/main/java/org/strongswan/android/ui/: VpnProfileDetailActivity.java
src/frontends/android/app/src/main/jni/libandroidbridge/backend/: android_creds.c  android_creds.h  android_service.c
src/frontends/android/app/src/main/play/listings/fr-FR/: full-description.txt  short-description.txt  title.txt
src/frontends/android/app/src/main/play/release-notes/fr-FR/: default.txt
src/frontends/android/app/src/main/res/layout/: profile_detail_view.xml
src/frontends/android/app/src/main/res/values/: arrays.xml  strings.xml  strings_managed_configuration.xml
src/frontends/android/app/src/main/res/values-de/: arrays.xml  strings.xml
src/frontends/android/app/src/main/res/values-fr/: .gitkeep  arrays.xml  strings.xml  strings_managed_configuration.xml
src/frontends/android/app/src/main/res/values-pl/: arrays.xml  strings.xml
src/frontends/android/app/src/main/res/values-ru/: arrays.xml  strings.xml
src/frontends/android/app/src/main/res/values-uk/: arrays.xml  strings.xml
src/frontends/android/app/src/main/res/values-zh-rCN/: arrays.xml  strings.xml
src/frontends/android/app/src/main/res/values-zh-rTW/: arrays.xml  strings.xml
src/frontends/android/app/src/main/res/xml/: managed_configuration.xml
src/frontends/ercom/: CMakeLists.txt  strongswan.conf
src/frontends/ercom/include/: cryptosmartvpn.h
src/frontends/ercom/src/: cryptosmartvpn.c  main.c
src/libcharon/: daemon.c
src/libcharon/plugins/kernel_libipsec/: kernel_libipsec_plugin.c
src/libcharon/plugins/kernel_netlink/: kernel_netlink_shared.c
src/libstrongswan/plugins/: plugin_feature.c  plugin_loader.c
